--- a/js/examples/cypress/package.json
+++ b/js/examples/cypress/package.json
@@ -11,7 +11,7 @@
 	"license": "ISC",
 	"devDependencies": {
 		"cypress-ctrf-json-reporter": "^0.0.12",
-		"send-test-report": "^1.0.0"
+		"@testkit/send-test-report": "^0.0.2"
 	},
 	"dependencies": {
 		"cypress": "^14.3.0"
