--- a/js/examples/playwright/package.json
+++ b/js/examples/playwright/package.json
@@ -14,6 +14,6 @@
     "@playwright/test": "^1.51.1",
     "@types/node": "^22.14.1",
     "playwright-ctrf-json-reporter": "^0.0.20",
-    "send-test-report": "^1.0.0"
+    "@testkit/send-test-report": "^0.0.2"
   }
 }
